Added chat pods to the file

--- a/UGolf/Podfile
+++ b/UGolf/Podfile
@@ -14,4 +14,9 @@ pod 'Firebase/Analytics'
 
 pod 'FBSDKLoginKit'
 
+pod 'MessageKit'
+pod 'JGProgressHUD'
+pod 'RealmSwift'
+pod 'SDWebImage'
+
 end
