--- a/UGolf/Podfile
+++ b/UGolf/Podfile
@@ -10,6 +10,7 @@ target 'UGolf' do
 pod 'Firebase/Core'
 pod 'Firebase/Auth'
 pod 'Firebase/Database'
+pod 'Firebase/Storage'
 pod 'Firebase/Analytics'
 
 pod 'FBSDKLoginKit'
