--- a/UGolf/UGolf/Info.plist
+++ b/UGolf/UGolf/Info.plist
@@ -51,6 +51,8 @@
 	<string>Please allow access to take profile photo</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Please allow access to select a profile picture from photo library</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Please allow access to microphone to take videos</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
